--- a/PracticaTeoriaDeLenguajes/nbproject/project.properties
+++ b/PracticaTeoriaDeLenguajes/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=practicateoriadelenguajes.Principal
+main.class=view.Main
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
