Lógica que genera un String con el código del autómata

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 /PracticaTeoriaDeLenguajes/nbproject/private/
 /PracticaTeoriaDeLenguajes/build/
 /PracticaTeoriaDeLenguajes/dist/
+/Template/nbproject/private/
+/Template/build/
